--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "homepage": "https://github.com/kopokopok/local-chat#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongodb": "^4.0.0",
-    "vue": "^2.6.14",
     "ws": "^7.5.3"
   },
   "devDependencies": {
