--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "ws": "^7.5.3"
   },
   "devDependencies": {
+    "ejs-lint": "^1.2.1",
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
     "nodemon": "^2.0.12"
   }
 }
